# advent-of-code-2021

./: Cargo.toml  README.md
benches/: d3.rs  d7.rs
inputs/: d4_munge  d4_test
src/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  lib.rs
