[package]
name = "aoc_2021"
version = "0.1.0"
authors = ["Benjamin Jones <benjaminfjones@gmail.com>"]
edition = "2021"

[dependencies]

[[bin]]
name = "d1"
path = "src/d1/bin/main.rs"

[[bin]]
name = "d2"
path = "src/d2/bin/main.rs"

[[bin]]
name = "d3"
path = "src/d3/bin/main.rs"

[[bin]]
name = "d4"
path = "src/d4/bin/main.rs"
